--- a/Inventory.html
+++ b/Inventory.html
@@ -10,6 +10,7 @@
             <a href="about.html">About</a>
             <a href="analysis.html">Analysis</a>
             <a href="Inventory.html">Inventory</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <body>
