--- a/analysis.html
+++ b/analysis.html
@@ -172,9 +172,11 @@
                 </div>
             </section>
         </main>
-
-
-
+                <footer class="dashboard-footer">
+            <p>✨ Modern Sales Analyzer project ✨</p>
+            <p>Sales Tracker &copy; 2023 | Profit/Loss Analysis System</p>
+        </footer>
+    </div>
     <!--  MODAL – Individual Sales Drilldown  -->
     <div id="salesModal" class="modal">
         <div class="modal-content">
