--- a/analysis.html
+++ b/analysis.html
@@ -25,8 +25,9 @@
 
         <nav class="dashboard-nav">
             <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="sales.html"><i class="fas fa-shopping-cart"></i> Record Sale</a>
+            <a href="Inventory.html"><i class="fas fa-shopping-cart"></i> Inventory</a>
             <a href="analysis.html" class="active"><i class="fas fa-chart-bar"></i> Analysis</a>
+            <a href="contact.html"><i>fa  </i>Contact</a>
         </nav>
 
         <main class="dashboard-main">
