added every code for contacts and about pages

--- a/analysis.html
+++ b/analysis.html
@@ -27,7 +27,8 @@
             <a href="index.html"><i class="fas fa-home"></i> Home</a>
             <a href="Inventory.html"><i class="fas fa-shopping-cart"></i> Inventory</a>
             <a href="analysis.html" class="active"><i class="fas fa-chart-bar"></i> Analysis</a>
-            <a href="contact.html"><i>fa  </i>Contact</a>
+            <a href="contact.html"><i class="fas fa-info-circle"></i>Contact</a>
+            <a href="about.html"><i class="fa-solid fa-phone"></i>About</a>
         </nav>
 
         <main class="dashboard-main">
