--- a/Inventory.html
+++ b/Inventory.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Inventory</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <header>
         <nav>
@@ -43,6 +43,6 @@
                 <div id="items-list"></div>
             </section>
         </main>
-        <script src="sript.js"></script>
+        <script src="sripts.js"></script>
     </body>
 </html>
