inserted navigation bar and included css styles

--- a/about.html
+++ b/about.html
@@ -6,7 +6,16 @@
     <title>Final Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
+    <head>
+        <nav class="nav-bar">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="analysis.html">Analysis</a>
+            <a href="Inventory.html">Inventory</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </head>
 
     <main class="main">
         <img class="image" src="keep.1.jpg" alt="">
