--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     
+     <nav class="nav-bar">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="analysis.html">Analysis</a>
+            <a href="Inventory.html">Inventory</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+
     <div class="Contact-section">  
         <h3>CONTACT US</h3>
         <p class="message">If you have any questions, feedback, or would like more information about KeepUp, please feel free to get in touch with us. Our team will respond as promptly as possible. We look forward to hearing from you and assisting with your business management needs.
