--- a/analysis.html
+++ b/analysis.html
@@ -21,15 +21,21 @@
                 <p>Track your sales performance — by day, week, month or custom range</p>
             </div>
             <div class="header-blob"></div>
-        </header>
+         <header>
+        <nav class="navbar">
+            <h1 class="logo">KeepUp</h1>
 
-        <nav class="dashboard-nav">
-            <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="Inventory.html"><i class="fas fa-shopping-cart"></i> Inventory</a>
-            <a href="analysis.html" class="active"><i class="fas fa-chart-bar"></i> Analysis</a>
-            <a href="contact.html"><i class="fas fa-info-circle"></i>Contact</a>
-            <a href="about.html"><i class="fa-solid fa-phone"></i>About</a>
+            
+
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" class="active">About</a></li>
+                <li><a href="Inventory.html">Inventory</a></li>
+                <li><a href="analysis.html">Analysis</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
         </nav>
+    </header>
 
         <main class="dashboard-main">
 
