--- a/analysis.html
+++ b/analysis.html
@@ -32,7 +32,7 @@
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="Inventory.html">Inventory</a></li>
                 <li><a href="analysis.html">Analysis</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
