--- a/Inventory.html
+++ b/Inventory.html
@@ -11,7 +11,7 @@
 
             
             <ul class="nav-links">
-                <a href="home.html">Home</a></li>
+                <a href="indexgit .html">Home</a></li>
                 <a href="about.html">About</a></li>
                 <a href="Inventory.html" class="active">Inventory</a></li>
                 <a href="analysis.html">Analysis</a></li>
