--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             
 
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="Inventory.html">Inventory</a></li>
                 <li><a href="analysis.html">Analysis</a></li>
